# chatbot-wrapper

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
docs/: API Interaction Sequence  API Interaction Sequence.mmd  Core Application Class Diagram  Research Process Flowchart  Research Query Flow - Sequence Diagram  high-level-architecture.mmd
